# storm-damage-predictor

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  schemas.py
frontend/: package-lock.json
frontend/src/: App.jsx  constants.js  index.css
frontend/src/components/: ModelStats.jsx  PredictForm.jsx  ResultPanel.jsx
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_model_training.ipynb  04_model_comparison.ipynb  04_shap_explainability.ipynb  combine.ipynb  lookup.ipynb
